Fixed Room UI styling, minor spacing.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -178,7 +178,8 @@ header {
 
 .row {
   height: 20%;
-  min-height: 90px;
+  margin: 10px;
+  /* min-height: 90px; */
 }
 
 .team-info {
@@ -201,7 +202,7 @@ header {
 }
 
 .rounded-circle:hover {
-  border: 5px solid var(--gold1);
+  border: 3px solid var(--gold1);
 }
 
 .button {
@@ -257,6 +258,7 @@ header {
 
 .image-container {
   position: relative;
+  padding: 2px;
 }
 
 /* .border-2 {
@@ -335,7 +337,7 @@ header {
 }
 
 @media (max-width: 500px) {
-  #bans, #recommend-container {
+  #recommend-container {
     display: block;
   }
   .bans-row {
